--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="C:\Users\kouli\Desktop\test-1\images\ωιολινο31.jpg" alt="Kyriaki's profile picture">
+                <img src="images\ωιολινο31.jpg" alt="Kyriaki's profile picture">
             </td>
             <td>
                 <h1>
