Changed hobbies and contact paths

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </table>
 
     <hr>
-    <a href="C:\Users\kouli\Desktop\test-1\hobbies.html">My hobbies</a>
-    <a href="C:\Users\kouli\Desktop\test-1\contact.html">Contact me</a>
+    <a href="hobbies.html">My hobbies</a>
+    <a href="contact.html">Contact me</a>
 </body>
 
 </html>
