--- a/index.html
+++ b/index.html
@@ -5,87 +5,59 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kyriaki Chatzaki</title>
-    <meta name="description" content="">
+    <meta name="description" content="Kyriaki's site">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div class="top-container">
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <h1>I'm Kyriaki.</h1>
+        <h2 class="first-discription">A programmer.</h2>
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+            <img class="profile-img" src="images/girl.png" alt="">
+            <h2>Hello.</h2>
+            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="skill-img-1" src="images/coding.png" alt="">
+                <h3>Design & Development</h3>
+                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="skill-row">
+                <img class="skill-img-2" src="images/crow.png">
+                <h3>Yoga, Violin, Books</h3>
+                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2 class="get-in-touch">Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:chatzaki2013@email.com">CONTACT ME</a>
+        </div>
+    </div>
 
-    <table cellspacing="20">
-        <tr>
-            <td>
-                <img src="images\ωιολινο31.jpg" alt="Kyriaki's profile picture">
-            </td>
-            <td>
-                <h1>
-                    Kyriaki Chatzaki
-                </h1>
-                <p>
-                    <em>Recent <strong>Computer Science</strong> graduate at <strong><a href="https://www.uoc.gr/">UoC</a></strong> and violinist in progress</em>
-                </p>
-                <p>
-                    I like coding, playing the violin, and petting my cat!
-                </p>
-            </td>
-        </tr>
 
-    </table>
-    <hr>
-    <h3>Violin Repertoire</h3>
-    <ol>
-        <li><a href="https://www.youtube.com/watch?v=KDJ6Wbzgy3E">Max Bruch Violin concerto 1st mvmt</a></li>
-        <li>Rode violin concerto no. 22 1st mvmt</li>
-        <li>Beriot Scene de Ballet</li>
-        <li>Wieniawski Legende</li>
-        <li>Bach double violin concerto</li>
-        <li>Bach prelude from 3rd Partita</li>
-    </ol>
-    <hr>
-    <h3>Work experience</h3>
-    <table cellspacing="10">
-        <thead>
-            <tr>
-                <th>Dates</th>
-                <th>Work</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Spring of 2021</td>
-                <td>IT support and web developer at KEK</td>
-            </tr>
-            <tr>
-                <td>Summer of 2022</td>
-                <td>Barista at Frouto</td>
-            </tr>
-        </tbody>
-    </table>
-    <hr>
-    <h3>CS skills</h3>
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/in/kyriaki-chatzaki-5ba0bb202/">LinkedIn</a>
+        <a class="footer-link" href="https://www.facebook.com/sandybops/">Facebook</a>
+        <p class="copyright">© 2023 Kyriaki Chatzaki.</p>
+    </div>
 
-    <table cellspacing="10">
-        <tr>
-            <td>HTML</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>CSS</td>
-            <td>⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>JavaScript</td>
-            <td>⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Java</td>
-            <td>⭐⭐⭐⭐</td>
-        </tr>
-    </table>
-
-    <hr>
-    <a href="hobbies.html">My hobbies</a>
-    <a href="contact.html">Contact me</a>
 </body>
 
 </html>
